@@ -10,6 +10,7 @@
 - Improved: Shopping mode page now can be opened with deeplink "grocy://shoppingmodepage" (#519)
 - Improved: Selection of child products in purchase form if parent product has no own stock (#508)
 - Improved: Master object lists now have fuzzy search (#610)
+- Improved: Consume quick mode confirmation page now has option to open instead of consume (#572)
 - Fixed: F-Droid build should work again (#566)
 - Fixed: Crash when amount in recipe ingredient was NaN (thanks @Whhoesj for your fix) (#565)
 - Fixed: Wrong ingredient amount in the recipe view with base servings other than 1 (#584)
